learn-gke/ch13/web-v2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-v2
  namespace: default
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    run: web-v2
  type: NodePort
